[gd_scene load_steps=8 format=3 uid="uid://y5tg56yncqcn"]

[ext_resource type="Script" path="res://scenes/components/my_btn1/my_btn1.gd" id="1_4qj5h"]
[ext_resource type="Texture2D" uid="uid://bolxxjtcyphil" path="res://assets/images/icons/right_btn_skobka.svg" id="2_1578b"]
[ext_resource type="Texture2D" uid="uid://dng6u78wggfps" path="res://assets/images/icons/left_btn_skobka.svg" id="3_t1s07"]

[sub_resource type="Animation" id="Animation_denla"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label/Line2D:default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftSprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b564i"]
resource_name = "clicked"
length = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.854902, 0.854902, 0.854902, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hqxpv"]
resource_name = "show_sprites"
length = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label/Line2D:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_elx4w"]
_data = {
"RESET": SubResource("Animation_denla"),
"clicked": SubResource("Animation_b564i"),
"show_sprites": SubResource("Animation_hqxpv")
}

[node name="MyBtn" type="BoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -11.5
offset_right = 17.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_4qj5h")
init_text = "Text123"
custom_font = "Optimus"

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "Text"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Line2D" type="Line2D" parent="Label"]
width = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_elx4w")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_elx4w")
}

[node name="RightSprite" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_1578b")

[node name="LeftSprite" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_t1s07")

[connection signal="gui_input" from="Label" to="." method="_on_label_gui_input"]
[connection signal="item_rect_changed" from="Label" to="." method="_on_label_item_rect_changed"]
[connection signal="mouse_entered" from="Label" to="." method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_label_mouse_exited"]
